@@ -1,20 +1,29 @@
 package cl.metspherical.calbucofelizbackend.features.events.service;
 
+import cl.metspherical.calbucofelizbackend.features.events.dto.AssistansResponseDTO;
+import cl.metspherical.calbucofelizbackend.features.events.dto.CreateAssistantResponseDTO;
 import cl.metspherical.calbucofelizbackend.features.events.dto.CreateEventRequestDTO;
 import cl.metspherical.calbucofelizbackend.features.events.dto.EventDetailDTO;
 import cl.metspherical.calbucofelizbackend.features.events.dto.EventOverviewDTO;
 import cl.metspherical.calbucofelizbackend.features.events.dto.EventsByMonthResponseDTO;
+import cl.metspherical.calbucofelizbackend.features.events.dto.UserBasicDTO;
+import cl.metspherical.calbucofelizbackend.features.events.enums.AssistanceType;
+import cl.metspherical.calbucofelizbackend.features.events.model.Assistance;
 import cl.metspherical.calbucofelizbackend.features.events.model.Event;
+import cl.metspherical.calbucofelizbackend.features.events.model.EventAssistant;
 import cl.metspherical.calbucofelizbackend.common.domain.User;
+import cl.metspherical.calbucofelizbackend.features.events.repository.AssistanceRepository;
 import cl.metspherical.calbucofelizbackend.features.events.repository.EventRepository;
+import cl.metspherical.calbucofelizbackend.features.events.repository.EventAssistantRepository;
 import cl.metspherical.calbucofelizbackend.common.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.time.Month;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
@@ -22,6 +31,8 @@ public class EventService {
 
     private final EventRepository eventRepository;
     private final UserRepository userRepository;
+    private final EventAssistantRepository eventAssistantRepository;
+    private final AssistanceRepository assistanceRepository;
 
     /**
      * Gets all events for a specific month
@@ -39,7 +50,7 @@ public class EventService {
         // Convert to DTOs
         List<EventOverviewDTO> eventDTOs = events.stream()
                 .map(this::convertToEventDTO)
-                .collect(Collectors.toList());
+                .toList();
         
         return new EventsByMonthResponseDTO(monthName, eventDTOs);
     }    /**
@@ -62,13 +73,97 @@ public class EventService {
      * @param id ID of the event to delete
      * @throws RuntimeException if event not found
      */
-    public void deleteEvent(Integer id) {
+    public void deleteEvent(Integer id,UUID userId) {
         // 1. Validate event exists
         Event event = eventRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Event not found with id: " + id));
+        // 2. Validate user is the creator of the event
+        if (!event.getCreatedBy().getId().equals(userId)) {
+            throw new RuntimeException("You are not authorized to delete this event");
+        }
 
-        // 2. Delete the event (cascade will handle event assistants and other relationships)
+        // 3. Delete the event (cascade will handle event assistants and other relationships)
         eventRepository.delete(event);
+    }
+
+    /**
+     * Gets all assistants for a specific event
+     *
+     * @param eventId ID of the event to get assistants for
+     * @return List of AssistansResponseDTO containing assistant information
+     * @throws RuntimeException if event not found
+     */
+    public List<AssistansResponseDTO> getEventsByAssistantId(Integer eventId) {
+        // 1. Validate event exists
+        if (!eventRepository.existsById(eventId)) {
+            throw new RuntimeException("Event not found with id: " + eventId);
+        }
+
+        // 2. Get all assistants for the event
+        List<EventAssistant> eventAssistants = eventAssistantRepository.findByEventIdWithDetails(eventId);
+
+        // 3. Convert to DTOs
+        return eventAssistants.stream()
+                .map(this::convertToAssistansResponseDTO)
+                .toList();
+    }
+
+    /**
+     * Adds or updates an assistant to an event
+     *
+     * @param eventId ID of the event
+     * @param userId ID of the user
+     * @param type String representing the assistance type
+     * @return CreateAssistantResponseDTO with status and type
+     * @throws RuntimeException if event not found or assistance type not found
+     */
+    @Transactional
+    public CreateAssistantResponseDTO addAssistant(Integer eventId, UUID userId,String type) {
+        // 1. Validate event exists
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new RuntimeException("Event not found with id: " + eventId));
+
+        // 2. Validate user exists
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
+
+        // 3. Convert string to AssistanceType enum
+        AssistanceType assistanceType = AssistanceType.fromDisplayName(type)
+                .orElseThrow(() -> new RuntimeException("Invalid assistance type: " + type));
+
+        // 4. Get or create assistance by name (which is the AssistanceType)
+        Assistance assistance = assistanceRepository.findByName(assistanceType)
+                .orElseGet(() -> {
+                    // Create new assistance if it doesn't exist
+                    Assistance newAssistance = Assistance.builder()
+                            .id((byte) (assistanceType.ordinal() + 1))
+                            .name(assistanceType)
+                            .build();
+                    return assistanceRepository.save(newAssistance);
+                });
+
+        // 5. Check if user is already registered for this event
+        EventAssistant.EventAssistantId assistantId = new EventAssistant.EventAssistantId(userId, eventId);
+        EventAssistant existingAssistant = eventAssistantRepository.findById(assistantId).orElse(null);
+
+        String status;
+        if (existingAssistant != null) {
+            // Update existing assistance
+            existingAssistant.setAssistance(assistance);
+            eventAssistantRepository.save(existingAssistant);
+            status = "updated";
+        } else {
+            // Create new assistant
+            EventAssistant newAssistant = EventAssistant.builder()
+                    .user(user)
+                    .event(event)
+                    .assistance(assistance)
+                    .build();
+            eventAssistantRepository.save(newAssistant);
+            status = "created";
+        }
+
+        return new CreateAssistantResponseDTO(status, assistance.getName().getDisplayName());
     }
 
     /**
@@ -78,12 +173,11 @@ public class EventService {
      * @return EventDetailDTO of the created event
      * @throws RuntimeException if user not found or invalid data
      */
-    public EventDetailDTO createEvent(CreateEventRequestDTO createEventRequest) {
+    public EventDetailDTO createEvent(CreateEventRequestDTO createEventRequest,UUID  authorId) {
         // Validate user exists
-        User user = userRepository.findByUsername(createEventRequest.username())
-                .orElseThrow(() -> new RuntimeException("User not found with username: " + createEventRequest.username()));
+        User author = userRepository.getReferenceById(authorId);
         
-        // Parse dates - assuming ISO format like "2025-06-15T10:00:00"
+        // Parse dates
         LocalDateTime initDateTime;
         LocalDateTime endingDateTime;
         try {
@@ -105,7 +199,7 @@ public class EventService {
                 .address(createEventRequest.adress()) // Note: typo in DTO field name
                 .init(initDateTime)
                 .ending(endingDateTime)
-                .createdBy(user)
+                .createdBy(author)
                 .build();
         
         // Save event
@@ -144,6 +238,22 @@ public class EventService {
                 event.getInit(),
                 event.getEnding(),
                 event.getCreatedBy().getUsername()
+        );
+    }
+
+    /**
+     * Converts EventAssistant entity to AssistansResponseDTO
+     *
+     * @param eventAssistant EventAssistant entity
+     * @return AssistansResponseDTO
+     */
+    private AssistansResponseDTO convertToAssistansResponseDTO(EventAssistant eventAssistant) {
+        UserBasicDTO userBasicDTO = new UserBasicDTO(
+                eventAssistant.getUser().getUsername(),
+                eventAssistant.getUser().getAvatar()
+        );        return new AssistansResponseDTO(
+                eventAssistant.getAssistance().getName().getDisplayName(),
+                userBasicDTO
         );
     }
 
